@@ -1,0 +1,141 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE psddl SYSTEM "psddl.dtd">
+
+<psddl>
+    <package name="Imp">
+
+
+        <!-- ========================================================================= -->
+    
+        
+        <pstype name="ConfigV1" version="1" type_id="Id_ImpConfig" pack="4">
+        
+            <tag name="config-type"/>
+
+            <enum name="Registers">
+                <enum-const name="Range" />
+                <enum-const name="Cal_range" />
+                <enum-const name="Reset" />
+                <enum-const name="Bias_data" />
+                <enum-const name="Cal_data" />
+                <enum-const name="BiasDac_data" />
+                <enum-const name="Cal_strobe" />
+                <enum-const name="NumberOfSamples" />
+                <enum-const name="TrigDelay" />
+                <enum-const name="Adc_delay" />
+                <enum-const name="NumberOfRegisters" />
+            </enum>
+
+            <attribute name="_range" type="uint32_t" accessor="range" />
+            <attribute name="_calRange" type="uint32_t" accessor="calRange" />
+            <attribute name="_reset" type="uint32_t" accessor="reset" />
+            <attribute name="_biasData" type="uint32_t" accessor="biasData" />
+            <attribute name="_calData" type="uint32_t" accessor="calData" />
+            <attribute name="_biasDacData" type="uint32_t" accessor="biasDacData" />
+            <attribute name="_calStrobe" type="uint32_t" accessor="calStrobe" />
+            <attribute name="_numberOfSamples" type="uint32_t" accessor="numberOfSamples" />
+            <attribute name="_trigDelay" type="uint32_t" accessor="trigDelay" />
+            <attribute name="_adcDelay" type="uint32_t" accessor="adcDelay" />
+
+        </pstype>
+        
+        
+        <!-- ========================================================================= -->
+
+        
+        <pstype name="Sample">
+        
+            <tag name="value-type"/>
+        
+            <const name="channelsPerDevice" value="4" />
+        
+            <attribute name="_channels" type="uint32_t" shape="4" accessor="channels">
+            </attribute>
+
+            <ctor>
+                Default constructor
+                <tag name="inline"/>
+            </ctor>
+            <ctor>
+                Constructor which takes values for every attribute
+                <tag name="inline"/>
+                <tag name="auto"/>
+            </ctor>
+
+        </pstype>
+        
+        <!-- ========================================================================= -->
+
+        
+        <pstype name="LaneStatus">
+        
+            <tag name="value-type"/>
+        
+            <attribute name="_value" type="uint32_t">
+                <bitfield name="_usLinkErrCount" size="4" type="uint8_t" accessor="linkErrCount" />
+                <bitfield name="_usLinkDownCount" size="4" type="uint8_t" accessor="linkDownCount" />
+                <bitfield name="_usCellErrCount" size="4" type="uint8_t" accessor="cellErrCount" />
+                <bitfield name="_usRxCount" size="4" type="uint8_t" accessor="rxCount" />
+                <bitfield name="_usLocLinked" size="1" type="uint8_t" accessor="locLinked" />
+                <bitfield name="_usRemLinked" size="1" type="uint8_t" accessor="remLinked" />
+                <bitfield name="_zeros" size="10" type="uint16_t" accessor="zeros" />
+                <bitfield name="_powersOkay" size="4" type="uint8_t" accessor="powersOkay" />
+            </attribute>
+
+            <ctor>
+                Default constructor
+                <tag name="inline"/>
+            </ctor>
+            <ctor>
+                Constructor which takes values for every attribute
+                <tag name="inline"/>
+                <tag name="auto"/>
+            </ctor>
+
+        </pstype>
+        
+        <!-- ========================================================================= -->
+
+        
+        <pstype name="ElementV1" version="1" type_id="Id_ImpData" pack="2">
+        
+            <xtc-config name="ConfigV1" />
+
+
+            <attribute name="_first" type="uint32_t">
+                <bitfield name="_vc" size="2" type="uint8_t" accessor="vc" />
+                <bitfield name="_z" size="4" type="uint8_t" />
+                <bitfield name="_lane" size="2" type="uint8_t" accessor="lane" />
+                <bitfield name="_tid" size="24" type="uint32_t" />
+            </attribute>
+
+            <attribute name="_second" type="uint32_t">
+                <bitfield name="_sz" size="32" type="uint32_t" />
+            </attribute>
+ 
+            <attribute name="_frameNumber" type="uint32_t" accessor="frameNumber">
+            </attribute>
+
+            <attribute name="_ticks" type="uint32_t" accessor="ticks">
+            </attribute>
+
+            <attribute name="_fiducials" type="uint32_t" accessor="fiducials">
+            </attribute>
+
+            <attribute name="_range" type="uint32_t" accessor="range">
+            </attribute>
+
+            <attribute name="_laneStatus" type="LaneStatus" accessor="laneStatus">
+            </attribute>
+
+            <attribute name="_z" type="uint32_t" >
+            </attribute>
+
+            <attribute name="_samples" type="Sample" shape="{xtc-config}.numberOfSamples()" accessor="samples">
+            </attribute>
+
+        </pstype>
+        
+        
+    </package>
+</psddl>
